--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^7.5.0",
     "tailwind-merge": "^2.2.1"
   },
